connected eslint and flashing errors

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,12 +25,13 @@
 p{
     color: rgb(4, 250, 17);
 }
+
 .wrapper{
     display: flex;
     width: 100%;
     min-width: 375px;
     min-height: 700px;
-    /* height: 415vh; */
+    height: 415vh;
     flex-direction: row;
     background: linear-gradient(to left,#e66465, #9198e5);
 
@@ -1341,6 +1342,10 @@ small{
 
 @media screen and (max-width: 800px) {
 
+    .wrapper{
+        height: 500vh; 
+    }
+
     /* .main-section-block:nth-child(3){
         width: 50%;
         height:55%;
@@ -1449,10 +1454,6 @@ small{
         /* margin: 0 10px ; */
     }
 
-    /* .wrapper{
-       
-    } */
-
     .aside{
         display: none;
     }
@@ -1491,20 +1492,20 @@ small{
         margin-left: 0;
     }
 
-    /* .wrapper{
-        height: 620vh; 
-    } */
+    .wrapper{
+        height: 720vh; 
+    }
 
     .main-navbar-open-aside{
         display: none;
     }
 
     .message-photo{
-        width: 80%;
+        width: 65%;
     }
     
     .member-photo{
-        width: 80%;
+        width: 65%;
     }
 
     .aside{
